Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30704

JSON_SCHEMA_VALID: multipleOf must be greater than zero

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 11.1.1
    • JSON
    • None

    Description

      multipleOf

      The value of "multipleOf" MUST be a number, strictly greater than 0.

      https://json-schema.org/draft/2019-09/json-schema-validation.html#rfc.section.6.2.1

      Case:

      SET @schema = '{
                        "multipleOf": 0
                      }';
      SELECT JSON_SCHEMA_VALID(@schema, '2');
      

      Expected that there will be a warning, but actual result is:

      JSON_SCHEMA_VALID(@schema, '2')
      0
      

      Also maybe a value like 0.1("multipleOf": 0.1) needs to be checked but I'm not sure

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              lstartseva Lena Startseva
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 40m
                  40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.