sql/json_schema.h
@@ -227,6 +227,8 @@ class Json_schema_minimum : public Json_schema_keyword
 
 class Json_schema_multiple_of : public Json_schema_keyword
 {
+  private:
+    double multiple_of;
   public:
     bool validate(const json_engine_t *je, const uchar *k_start= NULL,
                   const uchar *k_end= NULL) override;
